# time-series-trasnformer-tcc

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: TCC_01 - Obtendo preço de ações, fundoes, derivados e etc.ipynb
src/utility/: utilitys.py
